# http-adapter

./: Cargo.toml  README.md  README.tpl  clippy.toml  release.toml
.github/: dependabot.yml
.github/workflows/: http-adapter.yml
http-adapter/: Cargo.toml  README.md
http-adapter-reqwest/: Cargo.toml  README.md
http-adapter-reqwest/src/: lib.rs
http-adapter-reqwest/tests/: reqwest.rs
http-adapter-surf/: Cargo.toml  README.md
http-adapter-surf/src/: lib.rs
http-adapter-surf/tests/: surf.rs
http-adapter-ureq/: Cargo.toml  README.md
http-adapter-ureq/src/: lib.rs
http-adapter-ureq/tests/: ureq.rs
http-adapter/src/: lib.rs
tools/: pre-release.sh
