[package]
name = "http-adapter-reqwest"
version = "0.3.0"
edition = "2021"
description = "HTTP adapter implementation for reqwest"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/http-adapter-reqwest"
repository = "https://github.com/twistedfall/http-adapter"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
http-adapter = { version = "0.2", path = "../http-adapter" }
http-body-util = "0.1"
reqwest = { version = "0.12", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
default = ["reqwest/default"]
default-tls = ["reqwest/default-tls"]
http2 = ["reqwest/http2"]
native-tls = ["reqwest/native-tls"]
native-tls-alpn = ["reqwest/native-tls-alpn"]
native-tls-vendored = ["reqwest/native-tls-vendored"]
rustls-tls = ["reqwest/rustls-tls"]
rustls-tls-manual-roots = ["reqwest/rustls-tls-manual-roots"]
rustls-tls-webpki-roots = ["reqwest/rustls-tls-webpki-roots"]
rustls-tls-native-roots = ["reqwest/rustls-tls-native-roots"]
blocking = ["reqwest/blocking"]
charset = ["reqwest/charset"]
cookies = ["reqwest/cookies"]
gzip = ["reqwest/gzip"]
brotli = ["reqwest/brotli"]
deflate = ["reqwest/deflate"]
json = ["reqwest/json"]
multipart = ["reqwest/multipart"]
hickory-dns = ["reqwest/hickory-dns"]
stream = ["reqwest/stream"]
socks = ["reqwest/socks"]
macos-system-configuration = ["reqwest/macos-system-configuration"]
#http3 = ["reqwest/http3"]
