[package]
name = "http-adapter-surf"
version = "0.2.1"
edition = "2021"
description = "HTTP adapter implementation for surf"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/http-adapter-surf"
repository = "https://github.com/twistedfall/http-adapter"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
http-adapter = { version = "0.3", path = "../http-adapter" }
surf = { version = "2", default-features = false }

[dev-dependencies]
tokio = { version = "1", features = ["macros"] }

[features]
default = ["surf/default"]
curl-client = ["surf/curl-client"]
h1-client = ["surf/h1-client"]
h1-client-no-tls = ["surf/h1-client-no-tls"]
h1-client-rustls = ["surf/h1-client-no-tls"]
hyper-client = ["surf/hyper-client"]
wasm-client = ["surf/wasm-client"]
default-client = ["surf/default-client"]
middleware-logger = ["surf/middleware-logger"]
encoding = ["surf/encoding"]
