[package]
name = "http-adapter-ureq"
version = "0.1.0"
edition = "2021"
description = "HTTP adapter implementation for ureq"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/http-adapter-ureq"
repository = "https://github.com/twistedfall/http-adapter"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
http-adapter = { version = "0.1", path = "../http-adapter" }
ureq = { version = "2.0", default-features = false }

[features]
default = ["tls", "gzip"]
tls = ["ureq/tls"]
native-certs = ["ureq/native-certs"]
json = ["ureq/json"]
charset = ["ureq/charset"]
cookies = ["ureq/cookie"]
socks-proxy = ["ureq/socks-proxy"]
gzip = ["ureq/gzip"]
brotli = ["ureq/brotli"]
