[package]
name = "http-adapter-ureq"
version = "0.2.0"
edition = "2021"
description = "HTTP adapter implementation for ureq"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/http-adapter-ureq"
repository = "https://github.com/twistedfall/http-adapter"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
http-adapter = { version = "0.2", path = "../http-adapter" }
ureq = { version = "3.0", default-features = false }

[features]
default = ["ureq/default"]
rustls = ["ureq/rustls"]
native-tls = ["ureq/native-tls"]
platform-verifier = ["ureq/platform-verifier"]
socks-proxy = ["ureq/socks-proxy"]
cookies = ["ureq/cookies"]
gzip = ["ureq/gzip"]
brotli = ["ureq/brotli"]
charset = ["ureq/charset"]
json = ["ureq/json"]
