[package]
name = "http-adapter"
version = "0.1.1"
edition = "2021"
description = "Adapter for HTTP client agnostic requests"
keywords = ["http", "request", "client"]
categories = ["web-programming::http-client"]
authors = ["Pro <twisted.fall@gmail.com>"]
license = "LGPL-3.0"
documentation = "https://docs.rs/http-adapter"
repository = "https://github.com/twistedfall/http-adapter"

[badges]
maintenance = { status = "passively-maintained" }

[dependencies]
async-trait = "0.1"
http = "1"
